--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+# database configurations
+spring.datasource.url= jdbc:mysql://localhost/mydb
+spring.datasource.username=root
+spring.datasource.password=password
