--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 # database configurations
 spring.datasource.url= jdbc:mysql://localhost/mydb
 spring.datasource.username=root
-spring.datasource.password=Trombone1996*
+spring.datasource.password=password
