--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>web.WebApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
